[gd_scene load_steps=3 format=3 uid="uid://bbqarqkj4tmxh"]

[ext_resource type="Script" path="res://scripts/Level3_scripts/level3_pause_menu.gd" id="1_puspv"]
[ext_resource type="FontFile" uid="uid://c6qqt7umpvcxx" path="res://assets/ui_backgrounds/fonts/MinimalPixel v2.ttf" id="2_l4wsd"]

[node name="Level3_PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puspv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -154.0
offset_right = 132.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4wsd")
theme_override_font_sizes/font_size = 30
text = "PAUSE"
horizontal_alignment = 1

[node name="Resume_Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4wsd")
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="Save_Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4wsd")
theme_override_font_sizes/font_size = 18
text = "Save"

[node name="Load_Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4wsd")
theme_override_font_sizes/font_size = 18
text = "Load"

[node name="Exit_Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4wsd")
theme_override_font_sizes/font_size = 18
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/Resume_Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
